--- a/src/styles/UseCase.module.scss
+++ b/src/styles/UseCase.module.scss
@@ -1,4 +1,6 @@
 .use_case_card {
+  position: relative;
+  z-index: 3;
   border-radius: 20px;
   background-color: #F5F5F5;
 }
